# chess_cpp

./: CMakeLists.txt
inc/: CMakeLists.txt  bitHelper.h  board.h  chess.h  engine.h  engineSettings.h  transTable.h  util.h
src/: CMakeLists.txt  board.cpp  board_moveGen.cpp  chess.cpp  engine.cpp  main.cpp  transTable.cpp
src/game/: CMakeLists.txt
